:feat: add background

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
   <header>
-    <h1>Resume</h1>
+    <h1>Junior Frontend Developer</h1>
     <div class="person">
-      <div class="person-photo"></div>
+      <img src="img/person.JPG" alt="develop_Tatyana" class="person-photo">
       <div class="person-information">
         <p>Tatyana Miranovich</p>
         <div class="mobile">8 (044) 7651425</div>
@@ -61,7 +61,12 @@
     </section>
     <section class="experience">
       <h2>Experience</h2>
-      <p>February 2018 — until now - MTBank: customer service specialist</p>
+      <p>Web Design in HTML and CSS, JavaScript courses
+        Stormnet Technologies | 04.09.2018 - 13.12.2018
+          <br><br>
+       For a few months I developed a layout of three sites, where I put into practice the knowledge that I gained in the
+          courses. One of the projects was developed by Booststrap, the second by Flexbox, and the third by Float. We also
+          consolidated knowledge of JavaScript to complete different tasks.</p>
     </section>
     <section class="education">
       <h2>Education</h2>
@@ -91,9 +96,11 @@
     <div class="contact">
       <h2>Contact</h2>
       <ul>
+        <nav>
         <li class="box"><a href="https://vk.com/burumonchik" class="vk"></a></li>
         <li class="box"><a href="https://www.facebook.com/tanyusha.miranovich?ref=bookmarks" class="f"></a></li>
         <li class="box"><a href="https://www.instagram.com/tanyusha_miranovich" class="in"></a></li>
+      </nav>
       </ul>
     </div>
   </footer>
