:refactor: change experience section

--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
     </section>
     <section class="experience">
       <h2>Experience</h2>
-      <p>Web Design in HTML and CSS, JavaScript courses
+      <p class="experience-block1">Web Design in HTML and CSS, JavaScript courses
         Stormnet Technologies | 04.09.2018 - 13.12.2018
-          <br><br>
+      </p>
+      <p>
        For a few months I developed a layout of three sites, where I put into practice the knowledge that I gained in the
           courses. One of the projects was developed by Booststrap, the second by Flexbox, and the third by Float. We also
           consolidated knowledge of JavaScript to complete different tasks.</p>
