refactor: add list in class person

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
       <img src="img/person.JPG" alt="develop_Tatyana" class="person-photo">
       <div class="person-information">
         <p>Tatyana Miranovich</p>
-        <div class="mobile">8 (044) 7651425</div>
-        <div class="email">tanyusha.miranovich.97@mail.ru</div>
+        <ul>
+          <li><div class="mobile">8 (044) 7651425</div></li>
+          <li><div class="email">tanyusha.miranovich.97@mail.ru</div></li>
+        </ul>
+        <!-- <div class="mobile">8 (044) 7651425</div>
+        <div class="email">tanyusha.miranovich.97@mail.ru</div> -->
       </div>
     </div>
   </header>
